--- a/bin/form.html
+++ b/bin/form.html
@@ -77,6 +77,6 @@
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"
     ></script>
-    <script src="scripts/index.js"></script>
+    <script src="./scripts/index_review.js"></script>
   </body>
 </html>
